# elcarro-oracle-operator

./: .bazeliskrc  .bazelrc  .gitignore  .kazelcfg.json  BUILD.bazel  CODE_OF_CONDUCT.md  Makefile  OWNERS  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  tools.go
common/api/v1alpha1/: BUILD.bazel  backup.go  backupschedule.go  config.go  credential.go  cronanything.go  database.go  disk.go  instance.go  maintenancewindow.go  phase.go  user.go  zz_generated.deepcopy.go
common/pkg/maintenance/: BUILD.bazel  windows.go  windows_test.go
common/pkg/monitoring/: BUILD.bazel  exporter.go  exporter_test.go  monitoring.go  monitoring_test.go
common/pkg/ns/: BUILD.bazel  ns.go  ns_test.go
common/pkg/utils/: BUILD.bazel  utils.go  utils_test.go
hack/: 0001-Patch-to-add-bazel-support.patch  0002-Patch-to-add-bazel-support.patch  BUILD.bazel  bazel_workspace.sh  boilerplate.go.txt  configure-service-account.sh  def.bzl  go-coverage.sh  nogo.json  update-all.sh  update-bazel.sh  update-codegen.sh  update-fmt.sh  update-gomod.sh  verify-all.sh  verify-bazel.sh  verify-codegen.sh  verify-fmt.sh  verify-shellcheck.sh
oracle/: BUILD.bazel  Dockerfile  Makefile  PROJECT  main.go  operator.yaml  ui.yaml  version.go
oracle/api/v1alpha1/: BUILD.bazel  backup_types.go  backup_types_test.go  backupschedule_types.go  config_types.go  cronanything_types.go  database_types.go  export_types.go  groupversion_info.go  import_types.go  instance_types.go  pitr_types.go  release_types.go  zz_generated.deepcopy.go
oracle/cmd/config_agent/: BUILD.bazel  config_agent.go
oracle/cmd/dbdaemon/: BUILD.bazel  dbdaemon.go  init_dbdaemon.sh
oracle/cmd/dbdaemon_client/: BUILD.bazel  dbdaemon_client.go
oracle/cmd/dbdaemon_proxy/: BUILD.bazel  dbdaemon_proxy.go
oracle/cmd/init_oracle/: BUILD.bazel  init_container.sh  init_oracle.go  init_oracle.sh  stop_oracle.sh
oracle/cmd/logging/: BUILD.bazel  logging_main.go
oracle/cmd/monitoring/: BUILD.bazel  monitoring_agent.go  oracle.go  oracle_metrics.yaml  oracle_unified_metrics.yaml
oracle/cmd/pitr_agent/: BUILD.bazel  pitr_agent.go
oracle/config/crd/: kustomization.yaml
oracle/config/default/: manager_auth_proxy_patch.yaml
oracle/config/manager/: kustomization.yaml  manager.yaml
oracle/config/prometheus/: db_monitor.yaml
oracle/config/rbac/: backup_editor_role.yaml  backup_viewer_role.yaml  backupschedule_editor_role.yaml  backupschedule_viewer_role.yaml  config_editor_role.yaml  config_viewer_role.yaml  cronanything_editor_role.yaml  cronanything_viewer_role.yaml  database_editor_role.yaml  database_viewer_role.yaml  export_editor_role.yaml  export_viewer_role.yaml  import_editor_role.yaml  import_viewer_role.yaml  instance_editor_role.yaml  instance_viewer_role.yaml  pitr_editor_role.yaml  pitr_viewer_role.yaml  release_editor_role.yaml  release_viewer_role.yaml  role.yaml
oracle/config/samples/: v1alpha1_backup_rman1.yaml  v1alpha1_backup_rman2.yaml  v1alpha1_backup_rman3.yaml  v1alpha1_backup_rman4.yaml  v1alpha1_backup_snap1.yaml  v1alpha1_backup_snap2.yaml  v1alpha1_backup_snap_minikube.yaml  v1alpha1_backupschedule.yaml  v1alpha1_backupschedule_rman1.yaml  v1alpha1_config_bm1.yaml  v1alpha1_config_bm2.yaml  v1alpha1_config_gcp1.yaml  v1alpha1_config_gcp2.yaml  v1alpha1_config_gcp3.yaml  v1alpha1_config_kind.yaml  v1alpha1_config_minikube.yaml  v1alpha1_cronanything.yaml  v1alpha1_database_pdb1.yaml  v1alpha1_database_pdb1_express.yaml  v1alpha1_database_pdb1_gsm.yaml  v1alpha1_database_pdb2.yaml  v1alpha1_database_pdb3.yaml  v1alpha1_database_pdb4.yaml  v1alpha1_export_dmp1.yaml  v1alpha1_export_dmp2.yaml  v1alpha1_import_pdb1.yaml  v1alpha1_instance.yaml  v1alpha1_instance_18c_XE.yaml  v1alpha1_instance_18c_XE_express.yaml  v1alpha1_instance_19c_EE.yaml  v1alpha1_instance_19c_EE_express.yaml  v1alpha1_instance_custom_seeded.yaml  v1alpha1_instance_express.yaml  v1alpha1_instance_gcp_ilb.yaml  v1alpha1_instance_gcp_lb.yaml  v1alpha1_instance_minikube.yaml  v1alpha1_instance_parameter_update.yaml  v1alpha1_instance_patching.yaml  v1alpha1_instance_standby.yaml  v1alpha1_instance_unseeded.yaml  (+3 more)
oracle/config/workflows/: Kptfile  README.md  v1alpha1_database_pdb1.yaml  v1alpha1_instance.yaml
oracle/controllers/: BUILD.bazel  common.go  common_test.go  config_agent_helpers.go  exec.go  grpc_error.go  resources.go  resources_test.go  user_repository.go
oracle/controllers/backupcontroller/: BUILD.bazel  backup_controller.go  backup_controller_test.go  backup_controller_unit_test.go  operations.go  operations_test.go  oracle_backup.go  oracle_backup_test.go
oracle/controllers/backupschedulecontroller/: BUILD.bazel  backupschedule_controller.go  backupschedule_controller_test.go  operations.go
oracle/controllers/configcontroller/: BUILD.bazel  config_controller.go  config_controller_test.go
oracle/controllers/cronanythingcontroller/: BUILD.bazel  cronanything_controller.go  cronanything_controller_test.go  operations.go
oracle/controllers/databasecontroller/: BUILD.bazel  database_controller.go  database_controller_test.go  database_resources.go
oracle/controllers/exportcontroller/: BUILD.bazel  export_controller.go  export_controller_test.go
oracle/controllers/importcontroller/: BUILD.bazel  import_controller.go  import_controller_test.go
oracle/controllers/instancecontroller/: BUILD.bazel  instance_controller.go  instance_controller_parameters.go  instance_controller_parameters_test.go  instance_controller_patching.go  instance_controller_restore.go  instance_controller_restore_pitr.go  instance_controller_restore_test.go  instance_controller_standby.go  instance_controller_test.go  utils.go  utils_test.go
oracle/controllers/inttest/: .bazelrc  .bazelrc.tmpl  BUILD.bazel
oracle/controllers/pitrcontroller/: BUILD.bazel  operations.go  pitr_controller.go  (+1 more)
oracle/dashboards/: install-dashboards.jsonnet
oracle/scripts/: authentikos.yaml  canary_build_dbimage_image_build.sh  fmt_check.sh  fmt_fixup.sh  generate_version.sh  get_all_logs.sh  ginkgo_test.bzl  install_prow_deps.sh  redeploy.sh  setup_monitoring.sh
(+226 files in other folders)
