load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_push")

go_binary(
    name = "operator",
    embed = [":oracle_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "configs",
    srcs = glob(["config/**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "oracle_lib",
    srcs = [
        "main.go",
        "version.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle",
    visibility = ["//visibility:private"],
    deps = [
        "//oracle/api/v1alpha1",
        "//oracle/controllers",
        "//oracle/controllers/backupcontroller",
        "//oracle/controllers/backupschedulecontroller",
        "//oracle/controllers/cronanythingcontroller",
        "//oracle/controllers/databasecontroller",
        "//oracle/controllers/exportcontroller",
        "//oracle/controllers/importcontroller",
        "//oracle/controllers/instancecontroller",
        "//oracle/controllers/pitrcontroller",
        "@com_github_kubernetes_csi_external_snapshotter_v2//pkg/apis/volumesnapshot/v1beta1",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp",
        "@io_k8s_klog_v2//:klog",
        "@io_k8s_klog_v2//klogr",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

# Read in workspace status values to configure _push targets.
# REGISTRY = "${PROW_IMAGE_REPO}".split("/")[0]
REGISTRY = "{PROW_IMAGE_REPO}"

# PROJECT = "${PROW_IMAGE_REPO}".split("/")[1]
PROJECT = "{PROW_PROJECT}"

TAG = "{PROW_IMAGE_TAG}"

container_image(
    name = "base_image_with_busybox",
    tars = [
        "@distroless//image:000.tar.gz",
        "@distroless//image:001.tar.gz",
        "@distroless//image:002.tar.gz",
        "@busybox//image:000.tar.gz",  # duplicated files will be retained from the lowest layer.
    ],
    user = "65532:65532",  # nonroot:nonroot. Container admission tools require ids to guarentee nonroot.
    visibility = ["//visibility:public"],
)

container_image(
    name = "base_image",
    base = "@distroless//image",
    user = "65532:65532",  # nonroot:nonroot. Container admission tools require ids to guarentee nonroot.
    visibility = ["//visibility:public"],
)

container_image(
    name = "operator_image",
    base = ":base_image",
    files = [
        ":operator",
    ],
    symlinks = {"/manager": "/operator"},
)

container_push(
    name = "operator_image_push",
    format = "OCI",
    image = ":operator_image",
    registry = REGISTRY,
    repository = PROJECT + "/oracle.db.anthosapis.com/operator",
    stamp = "@io_bazel_rules_docker//stamp:always",
    tag = TAG,
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//oracle/api/v1alpha1:all-srcs",
        "//oracle/build:all-srcs",
        "//oracle/cmd/dbdaemon:all-srcs",
        "//oracle/cmd/dbdaemon_client:all-srcs",
        "//oracle/cmd/dbdaemon_proxy:all-srcs",
        "//oracle/cmd/init_oracle:all-srcs",
        "//oracle/cmd/logging:all-srcs",
        "//oracle/cmd/monitoring:all-srcs",
        "//oracle/cmd/pitr_agent:all-srcs",
        "//oracle/controllers:all-srcs",
        "//oracle/pkg/agents/backup:all-srcs",
        "//oracle/pkg/agents/common:all-srcs",
        "//oracle/pkg/agents/consts:all-srcs",
        "//oracle/pkg/agents/oracle:all-srcs",
        "//oracle/pkg/agents/pitr:all-srcs",
        "//oracle/pkg/agents/security:all-srcs",
        "//oracle/pkg/agents/standby:all-srcs",
        "//oracle/pkg/database/dbdaemon:all-srcs",
        "//oracle/pkg/database/dbdaemonproxy:all-srcs",
        "//oracle/pkg/database/lib/detach:all-srcs",
        "//oracle/pkg/database/lib/lro:all-srcs",
        "//oracle/pkg/database/provision:all-srcs",
        "//oracle/pkg/k8s:all-srcs",
        "//oracle/pkg/util:all-srcs",
        "//oracle/scripts/manual_test:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
