load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controllers",
    srcs = [
        "common.go",
        "config_agent_helpers.go",
        "exec.go",
        "grpc_error.go",
        "resources.go",
        "user_repository.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//common/api/v1alpha1",
        "//common/pkg/utils",
        "//oracle/api/v1alpha1",
        "//oracle/controllers/standbyhelpers",
        "//oracle/pkg/agents/backup",
        "//oracle/pkg/agents/common",
        "//oracle/pkg/agents/common/sql",
        "//oracle/pkg/agents/consts",
        "//oracle/pkg/agents/oracle",
        "//oracle/pkg/agents/standby",
        "//oracle/pkg/database/provision",
        "//oracle/pkg/k8s/ownerref",
        "//oracle/pkg/util/secret",
        "@com_github_go_logr_logr//:logr",
        "@com_github_kubernetes_csi_external_snapshotter_client_v4//apis/volumesnapshot/v1:volumesnapshot",
        "@com_google_cloud_go_secretmanager//apiv1",
        "@com_google_cloud_go_secretmanager//apiv1/secretmanagerpb",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/intstr",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/remotecommand",
        "@io_k8s_client_go//util/retry",
        "@io_k8s_klog_v2//:klog",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@org_bitbucket_creachadair_stringset//:stringset",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "controllers_test",
    srcs = [
        "common_test.go",
        "resources_test.go",
    ],
    embed = [":controllers"],
    deps = [
        "//common/api/v1alpha1",
        "//oracle/api/v1alpha1",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//oracle/controllers/backupcontroller:all-srcs",
        "//oracle/controllers/backupschedulecontroller:all-srcs",
        "//oracle/controllers/cronanythingcontroller:all-srcs",
        "//oracle/controllers/databasecontroller:all-srcs",
        "//oracle/controllers/exportcontroller:all-srcs",
        "//oracle/controllers/importcontroller:all-srcs",
        "//oracle/controllers/instancecontroller:all-srcs",
        "//oracle/controllers/inttest:all-srcs",
        "//oracle/controllers/pitrcontroller:all-srcs",
        "//oracle/controllers/standbyhelpers:all-srcs",
        "//oracle/controllers/testhelpers:all-srcs",
        "//oracle/controllers/validationstest:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
