load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "monitoring",
    srcs = [
        "exporter.go",
        "monitoring.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/common/pkg/monitoring",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_logr_logr//:logr",
        "@com_github_opencontainers_runc//libcontainer/cgroups",
        "@com_github_opencontainers_runc//libcontainer/cgroups/fs",
        "@com_github_opencontainers_runc//libcontainer/cgroups/fs2",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_test(
    name = "monitoring_test",
    srcs = [
        "exporter_test.go",
        "monitoring_test.go",
    ],
    embed = [":monitoring"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_go_logr_logr//:logr",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_opencontainers_runc//libcontainer/cgroups",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
