load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dbdaemon_client_lib",
    srcs = ["dbdaemon_client.go"],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/cmd/dbdaemon_client",
    visibility = ["//visibility:private"],
    deps = [
        "//oracle/pkg/agents/common",
        "//oracle/pkg/agents/consts",
        "//oracle/pkg/agents/oracle",
        "@com_github_golang_protobuf//ptypes/empty",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_genproto//googleapis/longrunning",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "dbdaemon_client",
    embed = [":dbdaemon_client_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
