load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dbdaemon_proxy_lib",
    srcs = ["dbdaemon_proxy.go"],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/cmd/dbdaemon_proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//oracle/pkg/agents/consts",
        "//oracle/pkg/agents/oracle",
        "//oracle/pkg/database/dbdaemonproxy",
        "//oracle/pkg/database/provision",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "dbdaemon_proxy",
    embed = [":dbdaemon_proxy_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
