load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "monitoring_lib",
    srcs = ["oracle.go"],
    importpath = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/cmd/monitoring",
    visibility = ["//visibility:private"],
    deps = [
        "//common/pkg/monitoring",
        "@com_github_godror_godror//:godror",
        "@com_github_prometheus_client_golang//prometheus",
        "@io_k8s_klog_v2//:klog",
    ],
)

filegroup(
    name = "monitoring_files",
    srcs = [
        "oracle_metrics.yaml",
        "oracle_unified_metrics.yaml",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "monitoring",
    embed = [":monitoring_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
